2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/22_Ifcomp.deca
// Description:
//    Programme  avec plusieurs if et elseif qui prennet  plusières argument de comparaison  
// Resultats:
//      programme correcte syntaxiquement
//
// Historique:
//    cree le 09/01/2024
{
    if(x==y){}
    else if (x==y){}

    if(x!=y){}
    else if (x!=y){}

    if(x == -y){}
    else if (x== -y){}

    if(x > y){}
    else if(x > y){}

    if( x < y){}
    else if( x < y){}

    if(x >= y){}
    else if( x >=y){}

    if(x <= y){}
    else if(x <= y){}

    if( x = !y){}
    else if( x = !y){}



}